updated atom description

--- a/src/default/translation/de/menu-tablet-fixer.yaml
+++ b/src/default/translation/de/menu-tablet-fixer.yaml
@@ -13,7 +13,7 @@
 #######################################################
 
 name: Menu Tablet Fixer
-description: Configuration des Menu Tablet Fixer Atoms.
+description: Verbessert das Touch Handling des Hauptmenus.
 type: atom
 
 form:
