--- a/src/default/translation/it/menu-tablet-fixer.yaml
+++ b/src/default/translation/it/menu-tablet-fixer.yaml
@@ -13,7 +13,7 @@
 #######################################################
 
 name: Menu Tablet Fixer
-description: Configurazione Atomo Menu Tablet Fixer.
+description: Migliora la gestione del tocco del menu principale.
 type: atom
 
 form:
