--- a/platform/joomla/helium/translation/it/menu-tablet-fixer.xml
+++ b/platform/joomla/helium/translation/it/menu-tablet-fixer.xml
@@ -12,7 +12,8 @@
         <![CDATA[<div class="alert alert-info" role="alert"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
         <h3>Menu Tablet Fixer - Atom for Gantry Framework</h3>
         <span aria-hidden="true" class="icon-user"></span>&nbsp;<em>Andreas Kar (andreas.kar@gmx.at)</em>
-        <p><b>NOTA</b>:&nbsp;La atomo viene installata nel template Gantry Helium.<br />Se si desidera installare su un template Gantry diverso, bisogna copiare manualmente i due file <code>menu-tablet-fixer.yaml</code> e <code>menu-tablet-fixer.html.twig</code> in <code>/templates/[NOME-TEMPLATE]/custom/particles</code>.<br>Inoltre, il file <code>menu-tablet-fixer.js</code> deve essere copiato nella cartella <code>/templates/[TEMPLATE]/custom/js</code>.</p></div>]]>
+        <p><b>NOTA</b>:&nbsp;La atomo viene installata per Gantry Helium.<br />Se si desidera installare su un template Gantry diverso, bisogna posizionare i file come segue:</p>
+		<ul><li><code>*.yaml</code> =&gt; <code>/templates/[TEMPLATE]/custom/particles</code></li><li><code>*.twig</code> =&gt; <code>/templates/[TEMPLATE]/custom/particles</code></li><li><code>*.js</code> =&gt; <code>/templates/[TEMPLATE]/custom/js</code></li></ul></div>]]>
     </description>
     <fileset>
         <files folder="particles" target="templates/g5_helium/custom/particles">
