--- a/src/legacy/translation/de/menu-tablet-fixer.yaml
+++ b/src/legacy/translation/de/menu-tablet-fixer.yaml
@@ -67,7 +67,7 @@ form:
           label: JS Pfad
           description: Dateiname der JS Datei oder Pfad auf diesem Server (relativ zum Standort) bzw. auf einem anderen Server (absolut).
           placeholder: Pfad/zum/JS oder Dateiname
-          default: menu-tablet-fixer.js
+          default: menu-tablet-fixer.min.js
 
         js.execution:
           type: select.select
