--- a/src/default/translation/it/menu-tablet-fixer.yaml
+++ b/src/default/translation/it/menu-tablet-fixer.yaml
@@ -32,6 +32,13 @@ form:
         tab_js:
             label: JS
             fields:
+                cdn.base_url:
+                  type: input.text
+                  label: CDN URL di base
+                  description: L'URL di base per il server CDN.
+                  placeholder: https://cdn.jsdelivr.net/gh/thexmanxyz/Tablet-Menu-Fixer-Gantry/src/js
+                  default: https://cdn.jsdelivr.net/gh/thexmanxyz/Tablet-Menu-Fixer-Gantry/src/js
+
                 js.placement:
                   type: select.select
                   label: Posizione JS
