--- a/src/legacy/translation/it/menu-tablet-fixer.yaml
+++ b/src/legacy/translation/it/menu-tablet-fixer.yaml
@@ -30,6 +30,13 @@ form:
       type: container.set
       label: JS
       fields:
+        cdn.base_url:
+          type: input.text
+          label: CDN URL di base
+          description: L'URL di base per il server CDN.
+          placeholder: https://cdn.jsdelivr.net/gh/thexmanxyz/Tablet-Menu-Fixer-Gantry/src/js
+          default: https://cdn.jsdelivr.net/gh/thexmanxyz/Tablet-Menu-Fixer-Gantry/src/js
+
         js.placement:
           type: select.select
           label: Posizione JS
