updated jsdelivr CDN path to omit caching

--- a/src/default/translation/it/menu-tablet-fixer.yaml
+++ b/src/default/translation/it/menu-tablet-fixer.yaml
@@ -36,8 +36,8 @@ form:
                   type: input.text
                   label: CDN URL di base
                   description: L'URL di base per il server CDN.
-                  placeholder: https://cdn.jsdelivr.net/gh/thexmanxyz/Tablet-Menu-Fixer-Gantry/src/js
-                  default: https://cdn.jsdelivr.net/gh/thexmanxyz/Tablet-Menu-Fixer-Gantry/src/js
+                  placeholder: https://cdn.jsdelivr.net/gh/thexmanxyz/Tablet-Menu-Fixer-Gantry@latest/src/js
+                  default: https://cdn.jsdelivr.net/gh/thexmanxyz/Tablet-Menu-Fixer-Gantry@latest/src/js
 
                 js.placement:
                   type: select.select
