--- a/src/legacy/translation/de/menu-tablet-fixer.yaml
+++ b/src/legacy/translation/de/menu-tablet-fixer.yaml
@@ -34,8 +34,8 @@ form:
           type: input.text
           label: CDN Basis URL
           description: Die Basis URL für den CDN Server.
-          placeholder: https://cdn.jsdelivr.net/gh/thexmanxyz/Tablet-Menu-Fixer-Gantry/src/js
-          default: https://cdn.jsdelivr.net/gh/thexmanxyz/Tablet-Menu-Fixer-Gantry/src/js
+          placeholder: https://cdn.jsdelivr.net/gh/thexmanxyz/Tablet-Menu-Fixer-Gantry@latest/src/js
+          default: https://cdn.jsdelivr.net/gh/thexmanxyz/Tablet-Menu-Fixer-Gantry@latest/src/js
 
         js.placement:
           type: select.select
